--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,6 +1,7 @@
 {
     "comments": {
-        "lineComment": "//"
+        "lineComment": "//",
+        "blockComment": ["/*", "*/"]
     },
     // symbols used as brackets
     "brackets": [
