--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
     "name": "jelly-language-support",
     "displayName": "Jellycuts Support",
     "description": "Support for the Jellycuts iOS app.",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "icon": "images/icon.png",
     "publisher": "ActuallyZach",
+    "repository": {
+        "private": true
+    },
     "engines": {
         "vscode": "^1.52.0"
     },
