--- a/package.json
+++ b/package.json
@@ -1,82 +1,78 @@
 {
-    "name": "jelly-language-support",
-    "displayName": "Jellycuts Support",
-    "description": "Support for the Jellycuts iOS app.",
-    "version": "1.2.2",
-    "icon": "images/icon.png",
-    "publisher": "ActuallyZach",
-    "repository": {
-        "private": true
-    },
-    "engines": {
-        "vscode": "^1.52.0"
-    },
-    "categories": [
-        "Programming Languages"
+  "name": "jellycuts-support",
+  "displayName": "Jellycuts Support",
+  "description": "Support for the Jellycuts language and the Jellycuts Bridge",
+  "version": "0.0.1",
+  "engines": {
+    "vscode": "^1.79.0"
+  },
+  "categories": [
+    "Programming Languages"
+  ],
+  "activationEvents": [],
+  "main": "./out/extension.js",
+  "contributes": {
+    "commands": [
+      {
+        "command": "jellycuts-support.startServer",
+        "title": "Start Bridge Server"
+      },
+      {
+        "command": "jellycuts-support.stopServer",
+        "title": "Stop Bridge Server"
+      }
     ],
-    "activationEvents": [
-        "onCommand:jellycuts-support.runserver",
-        "onCommand:jellycuts-support.closeserver",
-        "onLanguage:Jelly"
-    ],
-    "main": "./extension.js",
-    "contributes": {
-        "commands": [{
-                "command": "jellycuts-support.runserver",
-                "title": "Open Jellycuts Bridge"
-            },
-            {
-                "command": "jellycuts-support.closeserver",
-                "title": "Close Jellycuts Bridge"
-            }
+    "languages": [
+      {
+        "id": "Jelly",
+        "aliases": [
+          "Jelly",
+          "jelly"
         ],
-        "languages": [{
-            "id": "Jelly",
-            "aliases": [
-                "Jelly",
-                "jelly",
-                "Jellycuts",
-                "jellycut"
-            ],
-            "extensions": [
-                ".jelly",
-                ".jellycut"
-            ],
-            "configuration": "./language-configuration.json"
-        }],
-        "grammars": [{
-            "language": "Jelly",
-            "scopeName": "source.jelly",
-            "path": "./syntaxes/jelly.tmLanguage.json"
-        }],
-        "snippets": [{
-            "language": "Jelly",
-            "path": "./snippets/snippets.json"
-        }]
-    },
-    "scripts": {
-        "lint": "eslint .",
-        "pretest": "npm run lint",
-        "test": "node ./test/runTest.js"
-    },
-    "devDependencies": {
-        "@types/vscode": "^1.52.0",
-        "@types/glob": "^7.1.3",
-        "@types/mocha": "^8.0.0",
-        "@types/node": "^14.0.27",
-        "eslint": "^7.6.0",
-        "glob": "^7.1.6",
-        "mocha": "^8.0.1",
-        "typescript": "^3.8.3",
-        "vscode-test": "^1.4.0"
-    },
-    "dependencies": {
-        "internal-ip": "^6.2.0",
-        "ws": "^7.4.2"
-    },
-    "__metadata": {
-        "id": "71135255-22a8-4a4f-84b1-437157808e67",
-        "publisherDisplayName": "ActuallyZach",
-        "publisherId": "4c25b1c5-f270-4867-b145-c637aeacdac0"
-    }
+        "extensions": [
+          ".jelly"
+        ],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "Jelly",
+        "scopeName": "source.jelly",
+        "path": "./syntaxes/jelly.tmLanguage.json"
+      }
+    ],
+    "snippets": [
+      {
+        "language": "Jelly",
+        "path": "./snippets/snippets.json"
+      }
+    ]
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile && npm run lint",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
+  },
+  "devDependencies": {
+    "@types/glob": "^8.1.0",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "20.2.5",
+    "@types/vscode": "^1.79.0",
+    "@types/ws": "^8.5.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "@vscode/test-electron": "^2.3.2",
+    "eslint": "^8.41.0",
+    "glob": "^8.1.0",
+    "mocha": "^10.2.0",
+    "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "ips": "^2.1.3",
+    "ws": "^8.13.0"
+  }
 }
